<resources>
    <string name="about_logged_in">You are logged in as</string>
    <string name="about_app">Aurora is an open source alternative to Play Store, it lets you download apps from Play Store. It can search for updates of installed apps and lets you search for other apps.</string>
    <string name="about_opensource">Open source libaries</string>
    <string name="about_contributors">Contributors</string>
    <string name="about_devs">Developers</string>
    <string name="about_github">GitHub</string>
    <string name="about_xda">Dev Thread</string>
    <string name="about_telegram">Telegram</string>
    <string name="about_copied_to_clipboard">Copied to clipboard</string>
    <string name="list_line_2_updatable">"Updated on %1$s"</string>
    <string name="list_empty_updates">No apps need to be updated</string>
    <string name="list_empty_search">No apps found</string>
    <string name="list_empty_query">No recent searches</string>
    <string name="list_incompatible">incompatible</string>
    <string name="list_check_updates">Check update</string>
    <string name="list_update_all">Update All</string>
    <string name="list_update_all_txt">Update(s) available : %1$s"</string>
    <string name="list_update_chk_txt">Checking for updates..</string>
    <string name="list_updating">Updating…</string>
    <string name="list_app_has_ads">has ads</string>
    <string name="list_app_no_ads">no ads</string>
    <string name="list_app_depends_on_gsf">depends on GSF</string>
    <string name="list_app_independent_from_gsf">not GSF dependent</string>
    <string name="list_app_system">System app</string>
    <string name="list_app_blacklisted">Blacklisted</string>
    <string name="list_app_whitelisted">Whitelisted</string>
    <string name="action_home">Home</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_spoofed">Spoof</string>
    <string name="action_filter">Filter</string>
    <string name="action_filter_system_apps">System apps</string>
    <string name="action_filter_apps_with_ads">Apps with ads</string>
    <string name="action_filter_paid_apps">Paid apps</string>
    <string name="action_filter_gsf_dependent_apps">GSF dependent apps</string>
    <string name="action_filter_category">"Category: %1$s"</string>
    <string name="action_filter_rating">"Rating: %1$s"</string>
    <string name="action_filter_downloads">"Downloads: %1$s"</string>
    <string name="action_welcome">Welcome,</string>
    <string name="action_welcome_msg">Welcome to Aurora</string>
    <string name="action_acc_txt">Aurora Accounts</string>
    <string name="action_apps">"My apps"</string>
    <string name="action_logout">Log out</string>
    <string name="action_remove">Remove</string>
    <string name="action_login">Login</string>
    <string name="action_ok">OK</string>
    <string name="action_or">OR</string>
    <string name="action_acc_switch">Tap to switch</string>
    <string name="action_acc_add">Add Google Account</string>
    <string name="action_select">Select an account to login</string>
    <string name="action_usedummy">Use Dummy</string>
    <string name="action_usegoogle">Use Google</string>
    <string name="acc_dummy_name">Anonymous</string>
    <string name="acc_dummy">Login as Anonymous</string>
    <string name="acc_google">Login with Google</string>
    <string name="action_switch_dummy">Switch Dummy</string>
    <string name="action_switch_google">Switch Google</string>
    <string name="action_accounts">Accounts</string>
    <string name="action_search">Search</string>
    <string name="action_search_title">Search Apps &amp; Games</string>
    <string name="action_search_history">Your Search History</string>
    <string name="action_updates">Updates</string>
    <string name="action_ignore">Add to blacklist</string>
    <string name="action_unignore">Remove from blacklist</string>
    <string name="action_whitelist">Whitelist for updates</string>
    <string name="action_unwhitelist">Ignore updates</string>
    <string name="action_categories">Categories</string>
    <string name="all_categories">All categories</string>
    <string name="top_categories">Top categories</string>
    <string name="action_manual">Manual download</string>
    <string name="action_get_local_apk">Get local apk</string>
    <string name="action_make_system">Convert to system app</string>
    <string name="action_make_normal">Convert to normal app</string>
    <string name="search_filter">All apps</string>
    <string name="search_title">Search applications</string>
    <string name="dialog_title_package_id">Package with this name exists</string>
    <string name="dialog_message_package_id">There is a package with this exact name. Would you like to go directly to its details page?</string>
    <string name="dialog_two_factor_cancel">Not now</string>
    <string name="dialog_two_factor_create_password">Create password</string>
    <string name="dialog_title_two_factor">2-Step Verification</string>
    <string name="dialog_message_two_factor">It appears you have enabled 2-Step Verification for your account.\n\nPlease, create a dedicated app password for Aurora Store and use it to log in to the Aurora Store.\n\nTap \"Create password\" to be redirected to password creation page.</string>
    <string name="dialog_title_logout">Log out?</string>
    <string name="dialog_message_logout">Are you sure you want to log out?</string>
    <string name="dialog_account_type_provided_by_user">With your own Google account</string>
    <string name="dialog_account_type_predefined">With a dummy Aurora Store account</string>
    <string name="dialog_account_type_title">How would you like to log in to Google Play Store?</string>
    <string name="dialog_title_logging_in">Logging in</string>
    <string name="dialog_title_switching">Switching Dummy</string>
    <string name="dialog_message_logging_in_provided_by_user">Trying to log in with the credentials you provided</string>
    <string name="dialog_message_switching_in_predefined">Trying to switch between dummy accounts</string>
    <string name="dialog_message_logging_in_predefined">Trying to log in with credentials provided by Aurora Store</string>
    <string name="dialog_title_remounting_system">Working with /system partition</string>
    <string name="dialog_message_remounting_system">"Working with /system partition. This might take some time."</string>
    <string name="dialog_title_checking_busybox">Checking if busybox is available</string>
    <string name="dialog_message_checking_busybox">Certain system tools are required to work with system apps. Checking if they are available.</string>
    <string name="details_download">Get</string>
    <string name="details_install">Install</string>
    <string name="details_uninstall">Uninstall</string>
    <string name="pref_auto_install_summary_off">Apps are installed when the user touches the completion notification</string>
    <string name="pref_auto_install_summary_on">Apps are installed as soon as the download completes</string>
    <string name="pref_auto_install">Install apps immediately</string>
    <string name="pref_delete_apk_after_install_summary_off">Now .apks are not deleted after installation</string>
    <string name="pref_delete_apk_after_install_summary_on">Now .apks are deleted after installation</string>
    <string name="pref_delete_apk_after_install">Delete .apk after installation</string>
    <string name="pref_update_list_white_or_black">Black or white list of apps for update</string>
    <string name="pref_update_list_black">Change apps black list</string>
    <string name="pref_background_update_interval">Check for updates periodically</string>
    <string name="pref_background_update_install_summary_off">You only get a notification</string>
    <string name="pref_background_update_install_summary_on">Updates are installed if found (root)</string>
    <string name="pref_background_update_install">Also install the updates (root)</string>
    <string name="pref_background_update_download_summary_off">You only get a notification</string>
    <string name="pref_background_update_download_summary_on">Updates are downloaded if found</string>
    <string name="pref_background_update_download">Also download the updates</string>
    <string name="pref_background_update_wifi_only">On Wi-Fi only</string>
    <string name="pref_app_language_cat">Aurora Language</string>
    <string name="pref_app_language">Select Language</string>
    <string name="pref_requested_language">Play Store requests language</string>
    <string name="pref_device_to_pretend_to_be">Pretend to be a different device</string>
    <string name="pref_category_updates">Updates</string>
    <string name="pref_category_installation">Installation</string>
    <string name="pref_category_spoofing">Spoofing</string>
    <string name="pref_category_ui">User Interface</string>
    <string name="pref_installation_method">Installation method</string>
    <string name="pref_no_images">Download images on Wi-Fi only</string>
    <string name="pref_no_images_summary_off">Images are always downloaded now</string>
    <string name="pref_no_images_summary_on">Images are downloaded on Wi-Fi only</string>
    <string name="pref_download_deltas">Delta updates</string>
    <string name="pref_download_deltas_summary_off">Full apk is downloaded every time</string>
    <string name="pref_download_deltas_summary_on">Only changes are downloaded during updates</string>
    <string name="pref_download_directory">Download directory</string>
    <string name="pref_auto_whitelist">Auto whitelist</string>
    <string name="pref_auto_whitelist_summary_on">Apps installed by Aurora Store are automatically whitelisted</string>
    <string name="pref_auto_whitelist_summary_off">You need to whitelist apps manually</string>
    <string name="manual_download_incompatible">Google Play Store considers this app incompatible with your device. This means version code has not been returned by the Google Play Store server.</string>
    <string name="manual_download_warning">This page lets you manually choose the version of the app to download. Version code is a number identifying the version of an app. It starts from 1 and is incremented by the app developer every time there is a new version. Normally Play Store lets you download only the latest apk compatible with your device. By manually supplying this number you might be able to get other versions as well.\n\nKeep in mind that downloading arbitrary versions of apps is not supported by Google Play Store. Your success depends on a lucky guess of the version code. Even if you guess right and you get the download to start, you might get an incompatible apk. Most likely, you are wasting your time!</string>
    <string name="manual_download_hint_version_code">version code here</string>
    <string name="flagging_title">Flag as inappropriate</string>
    <string name="action_themes">Customize</string>
    <string name="theme_select">Select</string>
    <string name="theme_restart">Restart</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">Black</string>
    <string name="theme_base">Select Theme</string>
    <string name="theme_base_des">Choose between following Base application theme</string>
    <string name="theme_primary">Primary Color</string>
    <string name="theme_primary_des">A darker shade PrimaryDark is auto generated</string>
    <string name="theme_accent">Accent Color</string>
    <string name="theme_accent_des">Accent color applies to most UI elements, Buttons, Switches, Checkboxes, Image Tint, FAB etc</string>
    <string name="theme_restart_txt">Restart UI</string>
    <string name="theme_restart_des">Application needs to be restarted in order to apply accent color globally</string>
</resources>