<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="Download"
        android:key="PREFERENCE_DOWNLOAD_DIRECTORY"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_download_directory" />
    <PreferenceCategory android:title="@string/pref_category_ui">
        <ListPreference
            android:defaultValue="none"
            android:entries="@array/THEMES_LABELS"
            android:entryValues="@array/THEMES_VALUES"
            android:key="PREFERENCE_THEME"
            android:summary="@string/pref_theme_title_summary"
            android:title="@string/pref_theme_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="PREFERENCE_NO_IMAGES"
            android:summaryOff="@string/pref_no_images_summary_off"
            android:summaryOn="@string/pref_no_images_summary_on"
            android:title="@string/pref_no_images" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_app_language_cat">
        <ListPreference
            android:defaultValue="Default"
            android:entries="@array/language"
            android:entryValues="@array/languageAlias"
            android:key="language_preference"
            android:title="@string/pref_app_language" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_updates">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="PREFERENCE_DOWNLOAD_DELTAS"
            android:summaryOff="@string/pref_download_deltas_summary_off"
            android:summaryOn="@string/pref_download_deltas_summary_on"
            android:title="@string/pref_download_deltas" />
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/updateIntervalLabels"
            android:entryValues="@array/updateIntervalValues"
            android:key="PREFERENCE_BACKGROUND_UPDATE_INTERVAL"
            android:title="@string/pref_background_update_interval" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="PREFERENCE_BACKGROUND_UPDATE_DOWNLOAD"
            android:summaryOff="@string/pref_background_update_download_summary_off"
            android:summaryOn="@string/pref_background_update_download_summary_on"
            android:title="@string/pref_background_update_download" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="PREFERENCE_BACKGROUND_UPDATE_DOWNLOAD"
            android:key="PREFERENCE_BACKGROUND_UPDATE_WIFI_ONLY"
            android:title="@string/pref_background_update_wifi_only" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="PREFERENCE_BACKGROUND_UPDATE_DOWNLOAD"
            android:key="PREFERENCE_BACKGROUND_UPDATE_INSTALL"
            android:summaryOff="@string/pref_background_update_install_summary_off"
            android:summaryOn="@string/pref_background_update_install_summary_on"
            android:title="@string/pref_background_update_install" />
        <ListPreference
            android:defaultValue="black"
            android:entries="@array/blackOrWhiteLabels"
            android:entryValues="@array/blackOrWhiteValues"
            android:key="PREFERENCE_UPDATE_LIST_WHITE_OR_BLACK"
            android:title="@string/pref_update_list_white_or_black" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="PREFERENCE_AUTO_WHITELIST"
            android:summaryOff="@string/pref_auto_whitelist_summary_off"
            android:summaryOn="@string/pref_auto_whitelist_summary_on"
            android:title="@string/pref_auto_whitelist" />
        <com.dragons.aurora.MultiSelectListPreference
            android:key="PREFERENCE_UPDATE_LIST"
            android:persistent="true"
            android:title="@string/pref_update_list_black" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_installation">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="PREFERENCE_AUTO_INSTALL"
            android:summaryOff="@string/pref_auto_install_summary_off"
            android:summaryOn="@string/pref_auto_install_summary_on"
            android:title="@string/pref_auto_install" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="PREFERENCE_DELETE_APK_AFTER_INSTALL"
            android:summaryOff="@string/pref_delete_apk_after_install_summary_off"
            android:summaryOn="@string/pref_delete_apk_after_install_summary_on"
            android:title="@string/pref_delete_apk_after_install" />
        <ListPreference
            android:defaultValue="default"
            android:entries="@array/installationMethodLabels"
            android:entryValues="@array/installationMethodValues"
            android:key="PREFERENCE_INSTALLATION_METHOD"
            android:title="@string/pref_installation_method" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_spoofing">
        <ListPreference
            android:defaultValue=""
            android:key="PREFERENCE_REQUESTED_LANGUAGE"
            android:title="@string/pref_requested_language" />
        <ListPreference
            android:defaultValue=""
            android:key="PREFERENCE_DEVICE_TO_PRETEND_TO_BE"
            android:title="@string/pref_device_to_pretend_to_be" />
    </PreferenceCategory>
    <PreferenceCategory>
        <ListPreference />
    </PreferenceCategory>
</PreferenceScreen>