<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_download"
        android:title="@string/details_download"
        android:visible="false" />
    <item
        android:id="@+id/action_uninstall"
        android:title="@string/details_uninstall"
        android:visible="false" />
    <item
        android:id="@+id/action_ignore"
        android:title="@string/action_ignore"
        android:visible="false"
        android:checkable="true" />
    <item
        android:id="@+id/action_whitelist"
        android:title="@string/action_whitelist"
        android:visible="false"
        android:checkable="true" />
    <item
        android:id="@+id/action_manual"
        android:title="@string/action_manual" />
    <item
        android:id="@+id/action_get_local_apk"
        android:title="@string/action_get_local_apk"
        android:visible="false" />
    <item
        android:id="@+id/action_make_system"
        android:title="@string/action_make_system"
        android:visible="false" />
    <item
        android:id="@+id/action_make_normal"
        android:title="@string/action_make_normal"
        android:visible="false" />
    <item
        android:id="@+id/action_flag"
        android:title="@string/flagging_title"
        android:visible="false" />
</menu>
